--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.idea
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -8,3 +9,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# Maven specific
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
